--- a/Develop/output/style.css
+++ b/Develop/output/style.css
@@ -5,13 +5,14 @@ body {
     background-position: center;
 }
 
-.card-title  {
-    color: blue;
-    /* text-shadow: .5px .5px px #000000; */
-    /* text-align: center; */
-}
-
 h1 {
     text-shadow: 3px 3px 6px #000000;
 }
 
+h2 {
+    color: blue;
+}
+
+h3 {
+    color: blue;
+}
